# cpp-utils

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_build_script_ubuntu.sh  cmake_build_script_windows-vs2022.bat
include/: RamerDouglasPeucker.h  RamerDouglasPeucker.hpp  asciicolumnfile.h  asciicolumnfile.hpp  blocklanguage.h  blocklanguage.hpp  cgal_utils.h  cgal_utils.hpp  colormap.hpp  conductivity_logs.hpp  crs.hpp  csvfile.hpp  eigen_utils.hpp  fielddefinition.h  fielddefinition.hpp  file_formats.h  file_formats.hpp  file_utils.h  file_utils.hpp  file_utils_new.hpp  filesplitter.h  filesplitter.hpp  gdal_utilities.hpp  gdiplus_utils.h  gdiplus_utils.hpp  general_constants.hpp  general_types.h  general_types.hpp  general_utils.h  general_utils.hpp  geometry3d.hpp  global_stacktrace.hpp  intrepid.h  intrepid.hpp  logger.h  logger.hpp  matrixvector23.hpp  memusage.h  memusage.hpp  mpi_wrapper.h  (+21 more)
src/: RamerDouglasPeucker.cpp  RamerDouglasPeucker.h  asciicolumnfile.h  blocklanguage.cpp  blocklanguage.h  cgal_utils.cpp  cgal_utils.h  colormap.h  conductivity_logs.h  crs.h  csvfile.h  ctlinedata.h  earth1d.h  eigen_utils.h  fielddefinition.cpp  fielddefinition.h  file_formats.h  file_utils.cpp  file_utils.h  gdal_utils.cpp  gdal_utils.h  gdiplus_utils.h  general_constants.h  general_types.h  general_utils.cpp  general_utils.h  geometry3d.cpp  geometry3d.h  intrepid.h  logger.h  matrix_ops.cpp  matrix_ops.h  matrixvector23.h  memusage.cpp  memusage.h  mpi_wrapper.h  ndarray.h  ogr_utils.h  petsc_wrapper.h  radius_searcher.h  (+11 more)
